# t_opencv

./: 1.avi  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  config.yaml  list.txt  tes.cpp  test  test.c  test.cpp  test_affine.cpp  test_application.cpp  test_back_projection.cpp  test_border.cpp  test_convex_hull.cpp  test_corner_harris.cpp  test_creating_bounding_boxes_and_circles_for_contours.cpp  test_creating_video.cpp  test_deblur.cpp  test_erode_dilate.cpp  test_feature_detect.cpp  test_file.cpp  test_find_contours.cpp  test_geospatial.cpp  test_hdr.cpp  test_histogram_calculation.cpp  test_hough_circles.cpp  test_hough_line.cpp  test_image_moments.cpp  test_img_processing.cpp  test_linear_filter.cpp  test_meanshift.cpp  test_neural.cpp  test_node  test_opencv.cpp  test_remapping.cpp  test_segmentation_watershed.cpp  (+8 more)
camera_calibration/: VID5.xml  in_VID5.xml
include/: test.h
real_time_pose_estimation/: CMakeCache.txt
